# asynclog

./: .gitattributes  .gitignore  CMakeLists.txt
include/asynclog/: asynclog.hpp  concurrency.hpp  config.hpp  formatter.hpp  helper.hpp  queue.hpp
include/asynclog/sinks/: file_sink.hpp  fmt_sink.hpp  fp_sink.hpp  null_sink.hpp
src/: syslog_hook.cpp
tests/: bench_async_log.cpp  bench_syslog.cpp  sample.cpp  stb_sprintf.h
